# inf_4sem

./: .gitignore  README.md
01_mesh/hw/: CMakeLists.txt
01_mesh/hw/step0/: task1.cpp  task2.cpp  task3.cpp
01_mesh/hw/step1/: task.cpp
01_mesh/hw/step2/: task.cpp
02_vtk/hw/: CMakeLists.txt  README.md  task.cpp
03_fenics/hw/: CMakeLists.txt  biharmonic.py  main.cpp
lib_instrustion/: README.md
